--- a/src/assets/styles/scss-globals.scss
+++ b/src/assets/styles/scss-globals.scss
@@ -10,6 +10,7 @@
   text-shadow: 0.1px 0.3px 2px rgba(0, 0, 0, 0.2);
 }
 
+// Header
 $header_height: 56px;
 
 .app_header_height {
@@ -20,6 +21,7 @@ $header_height: 56px;
   top: $header_height !important;
 }
 
+// Sidebar
 .sidebar-overlay {
   border-right: 1px solid rgba(255, 255, 255, 0.2);
   box-shadow: 3px 3px 4px rgba(0, 0, 0, 0.2);
@@ -27,4 +29,15 @@ $header_height: 56px;
 
 .sidebar-blur {
   backdrop-filter: blur(16px);
+}
+
+.sidebar-in-transition {
+  transition: background-color 0.3s ease-out;
+  background-color: rgba(0, 0, 0, 0.15);
+  width: 100%;
+}
+.sidebar-out-transition {
+  transition: background-color 0.3s ease-out, width 0.1s 0.35s;
+  background-color: rgba(0, 0, 0, 0);
+  width: 0;
 }
