--- a/src/assets/styles/tailwind-globals.scss
+++ b/src/assets/styles/tailwind-globals.scss
@@ -22,7 +22,7 @@
   // ## Regular input ##
   .app_input_top {
     // this has to match 'app_input_label' below.
-    @apply top-5;
+    @apply top-4;
   }
 
   .app_input {
@@ -32,8 +32,8 @@
 
   .app_input_label {
     // '-top-5' has to match 'app_input_top' above.
-    @apply transition-all duration-200 font-app_primary absolute left-0 -top-5 text-gray-600 peer-placeholder-shown:text-base text-sm  font-normal peer-placeholder-shown:text-gray-400 peer-placeholder-shown:top-2 peer-focus:-top-5
-    peer-focus:text-gray-600 peer-focus:text-sm select-none peer-required:after:content-['*'];
+    @apply transition-all duration-200 font-app_primary absolute left-0 -top-4 text-gray-600 peer-placeholder-shown:text-base text-[12px]  font-normal peer-placeholder-shown:text-gray-400 peer-placeholder-shown:top-2 peer-focus:-top-4
+    peer-focus:text-gray-600 peer-focus:text-[12px] select-none peer-required:after:content-['*'];
   }
 
   .app_input_info {
