--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,5 @@
 @import "./assets/styles/scss-globals.scss";
+@import "./components/TaskStatus/task-statuses.scss";
 @import "./assets/styles/tailwind-globals.scss";
 @import "./assets/styles/scrollbar.scss";
 @import-normalize;
