--- a/src/app/components/Layout/Popup/Popup.scss
+++ b/src/app/components/Layout/Popup/Popup.scss
@@ -37,7 +37,7 @@ $paddings: 5px;
   &__content {
     position: relative;
     z-index: 1200;
-    overflow: hidden;
+    // overflow: hidden;
     padding: inherit;
 
     display: flex;
