--- a/src/app/components/Projects/ProjectView/ProjectView.scss
+++ b/src/app/components/Projects/ProjectView/ProjectView.scss
@@ -1,4 +1,4 @@
-$header-height: 60px;
+$header-height: 50px;
 $side-width: 220px;
 $body-width: 692px;
 
@@ -14,6 +14,7 @@ $body-width: 692px;
   width: 100%;
   height: auto;
   overflow: hidden;
+  // border-radius: 14px;
 
   &__main {
     position: relative;
@@ -24,6 +25,7 @@ $body-width: 692px;
     .project-view-header {
       z-index: 1;
       position: absolute;
+      min-height: $header-height;
       height: $header-height;
 
       border-top-left-radius: 3px;
@@ -31,7 +33,7 @@ $body-width: 692px;
 
       width: 100%;
       font-weight: 600;
-      font-size: 13px;
+      font-size: 12px;
       display: flex;
       justify-content: space-around;
       align-content: center;
@@ -50,7 +52,7 @@ $body-width: 692px;
       align-content: flex-start;
       gap: 0px;
       padding: 6px;
-      height: calc(100% - 60px);
+      height: calc(100% - $header-height);
       width: 100%;
       overflow-y: scroll;
     }
@@ -82,7 +84,7 @@ $body-width: 692px;
 }
 
 @media (max-width: 9000px) {
-  $side-width: 250px;
+  // $side-width: 250px;
   .project-view {
     &__main {
       width: calc(100% - ($side-width * 1));
@@ -108,7 +110,7 @@ $body-width: 692px;
 }
 
 @media (max-width: 1900px) {
-  $side-width: 262px;
+  // $side-width: 262px;
   .project-view {
     &__main {
       width: calc(100% - ($side-width * 1));
@@ -134,7 +136,7 @@ $body-width: 692px;
 }
 
 @media (max-width: 1680px) {
-  $side-width: 230px;
+  // $side-width: 230px;
   .project-view {
     &__main {
       width: calc(100% - ($side-width * 1));
@@ -160,7 +162,7 @@ $body-width: 692px;
 }
 
 @media (max-width: 1536px) {
-  $side-width: 228px;
+  // $side-width: 228px;
   .project-view {
     &__main {
       width: calc(100% - ($side-width * 1));
@@ -186,7 +188,7 @@ $body-width: 692px;
 }
 
 @media (max-width: 1440px) {
-  $side-width: 222px;
+  // $side-width: 222px;
   .project-view {
     &__main {
       width: calc(100% - ($side-width * 1));
@@ -212,7 +214,7 @@ $body-width: 692px;
 }
 
 @media (max-width: 1366px) {
-  $side-width: 213px;
+  // $side-width: 213px;
   .project-view {
     &__main {
       width: calc(100% - ($side-width * 1));
@@ -238,7 +240,7 @@ $body-width: 692px;
 }
 
 @media (max-width: 1280px) {
-  $side-width: 213px;
+  // $side-width: 213px;
   .project-view {
     &__main {
       width: calc(100% - ($side-width * 1));
@@ -264,7 +266,7 @@ $body-width: 692px;
 }
 
 @media (max-width: 1150px) {
-  $side-width: 204px;
+  // $side-width: 204px;
   .project-view {
     &__main {
       width: calc(100% - ($side-width * 1));
@@ -290,7 +292,7 @@ $body-width: 692px;
 }
 
 @media (max-width: 1024px) {
-  $side-width: 198px;
+  // $side-width: 198px;
   .project-view {
     &__main {
       width: calc(100% - ($side-width * 1));
@@ -313,7 +315,7 @@ $body-width: 692px;
       width: calc($side-width);
     }
     .header-tab-wrapper {
-      font-size: 13px;
+      font-size: 12px;
       div svg {
         height: 0 !important;
         width: 0 !important;
@@ -324,7 +326,7 @@ $body-width: 692px;
 }
 
 @media (max-width: 980px) {
-  $side-width: 218px;
+  // $side-width: 218px;
   .project-view {
     &__main {
       width: calc(100% - ($side-width * 1));
@@ -355,7 +357,7 @@ $body-width: 692px;
 }
 
 @media (max-width: 834px) {
-  $side-width: 208px;
+  // $side-width: 208px;
   .project-view {
     &__main {
       width: calc(100% - ($side-width * 1));
