--- a/src/app/components/Layout/Popup/Popup.scss
+++ b/src/app/components/Layout/Popup/Popup.scss
@@ -3,6 +3,7 @@
   position: fixed;
   height: 100vh;
   width: 100vw;
+  overflow-y: scroll;
 
   &.in-transition {
     transition: all 200ms ease-in-out;
@@ -22,10 +23,11 @@ $paddings: 5px;
 .app_popup {
   position: absolute;
   z-index: 1100;
-  top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
-  border-radius: 4px;
+  top: 25%;
+  // transform: translate(-50%, -50%);
+  transform: translate(-50%, 0);
+  border-radius: 14px;
   backdrop-filter: blur(16px);
   background-color: rgba(255, 255, 255, 0.1);
   box-shadow: 3px 3px 4px rgba(0, 0, 0, 0.2);
@@ -45,15 +47,15 @@ $paddings: 5px;
     align-content: center;
     align-items: center;
 
-    border-radius: 4px;
+    border-radius: 14px;
     background-color: rgba(255, 255, 255, 0.85);
   }
 
   &__close {
     position: absolute;
     z-index: 1400;
-    top: -8px;
-    right: -8px;
+    top: -6px;
+    right: -6px;
   }
 }
 
