--- a/src/app/components/Projects/project-roles.scss
+++ b/src/app/components/Projects/project-roles.scss
@@ -13,21 +13,21 @@ $visuals: (
 );
 
 @mixin role($color) {
-  padding-left: 18px;
+  padding-left: 16px;
   position: relative;
   // text-shadow: 0.1px 0.1px 1px rgba(0, 0, 0, 0.25);
   &::before {
     content: "";
     position: absolute;
-    width: 12px;
-    height: 12px;
-    line-height: 12px;
+    width: 10px;
+    height: 10px;
+    line-height: 10px;
     margin-left: 2px;
     left: -6px;
     top: 5px;
-    border-radius: 100%;
+    border-radius: 2px;
     background-color: #{$color};
-    box-shadow: 0.8px 0.8px 3px black;
+    box-shadow: 0.8px 0.8px 3px rgba(0, 0, 0, 0.8);
   }
 }
 
