--- a/src/assets/styles/tailwind-globals.scss
+++ b/src/assets/styles/tailwind-globals.scss
@@ -10,6 +10,10 @@
   .app_layout_padding {
     @apply px-[6vw] sm:px-[6vw] md:px-[6vw] mdx:px-[6vw] lg:px-[10vw] xl:px-[14vw] 2xl:px-[16vw];
   }
+
+  .app_input_disabled {
+    @apply bg-gray-100 border-b-gray-100 text-gray-400;
+  }
 }
 
 @layer components {
