--- a/src/app/components/Projects/ProjectsTable/ProjectsTable.scss
+++ b/src/app/components/Projects/ProjectsTable/ProjectsTable.scss
@@ -2,10 +2,18 @@ $header-height: 50px;
 $side-width: 220px;
 $body-width: 692px;
 
-.project-border {
-  border-color: rgb(220, 220, 220);
-  border-style: solid;
-  border-collapse: collapse;
+.side-panel {
+  width: $side-width;
+
+  &--projects-table {
+    .side-top {
+      height: $header-height;
+    }
+
+    .side-bottom {
+      height: 540px;
+    }
+  }
 }
 
 .projects-table {
