--- a/src/assets/styles/scss-globals.scss
+++ b/src/assets/styles/scss-globals.scss
@@ -13,6 +13,7 @@
   -webkit-box-orient: vertical;
   line-break: loose;
   word-wrap: break-word;
+  word-break: break-all;
 }
 
 .app_ellipsis_inline {
