--- a/src/app/components/Projects/ProjectsTable/ProjectsTable.scss
+++ b/src/app/components/Projects/ProjectsTable/ProjectsTable.scss
@@ -1,6 +1,6 @@
 $header-height: 50px;
 $side-width: 220px;
-$body-width: 692px;
+$body-width: 680px;
 
 .side-panel {
   width: $side-width;
@@ -16,13 +16,16 @@ $body-width: 692px;
   }
 }
 
+.projects-table-wrapper {
+  min-width: 900px;
+}
+
 .projects-table {
   position: relative;
   z-index: 1;
   width: 100%;
   height: auto;
   overflow: hidden;
-  border-radius: 14px;
 
   &__main {
     position: relative;
@@ -62,6 +65,7 @@ $body-width: 692px;
       padding: 6px;
       height: calc(100% - $header-height);
       width: 100%;
+      min-width: $body-width;
       overflow-y: scroll;
 
       .project-table-item {
