--- a/src/app/components/Projects/ProjectView/ProjectView.scss
+++ b/src/app/components/Projects/ProjectView/ProjectView.scss
@@ -23,6 +23,28 @@ $body-width: 680px;
   min-width: 900px;
 }
 
+.project-archived {
+  .task-card {
+    background-color: rgb(190, 190, 190);
+    div,
+    p {
+      color: rgb(250, 250, 250);
+
+      text-shadow: 0px 1px 5px rgba(0, 0, 0, 0.5);
+      background-color: rgb(190, 190, 190);
+    }
+  }
+
+  .columns-headers {
+  }
+
+  .columns-content {
+    > div {
+      background-color: rgb(170, 170, 170);
+    }
+  }
+}
+
 .project-view {
   position: relative;
   z-index: 1;
