--- a/src/app/components/Account/AccountInfo/ContactItem/ContactItem.scss
+++ b/src/app/components/Account/AccountInfo/ContactItem/ContactItem.scss
@@ -1,18 +1,18 @@
-.status-pending {
+.contact-status-pending {
   color: rgba(0, 0, 255, 1);
   border-radius: 3px;
   letter-spacing: 1.4px;
   font-size: 11px;
 }
 
-.status-accepted {
+.contact-status-accepted {
   color: rgba(0, 255, 0, 1);
   border-radius: 3px;
   letter-spacing: 1.4px;
   font-size: 11px;
 }
 
-.status-rejected {
+.contact-status-rejected {
   color: rgba(255, 0, 0, 1);
   border-radius: 3px;
   letter-spacing: 1.4px;
