--- a/src/app/components/Projects/visuals/project-visuals.scss
+++ b/src/app/components/Projects/visuals/project-visuals.scss
@@ -2,19 +2,19 @@
 
 /* # Project Status # */
 $project-roles: (
-  "manager": "rgba(21, 175, 115, 1)",
-  "product_owner": "rgba(21, 175, 115, 1)",
-  "vice_manager": "rgba(21, 175, 115, 1)",
-  "team_leader": "rgba(0, 124, 80, 1)",
-  "analyst": "rgba(230, 183, 37, 1)",
-  "designer": "rgba(230, 183, 37, 1)",
-  "intern": "rgba(5, 6, 151, 1)",
-  "coworker": "rgba(5, 6, 151, 1)",
-  "tester": "rgba(254, 98, 9, 1)",
-  "ui_designer": "rgba(125, 105, 176, 1)",
-  "developer": "rgba(18, 92, 255, 1)",
-  "spectator": "rgba(128, 74, 40, 1)",
-  "CUSTOM_ROLE": "rgba(236, 51, 0, 1)",
+  "manager": linear-gradient(135deg, rgba(78, 255, 186, 1) 0%, rgba(29, 117, 203, 1) 100%),
+  "product_owner": linear-gradient(135deg, rgba(255, 171, 0, 1) 6%, rgba(110, 100, 255, 1) 81%),
+  "vice_manager": rgba(21, 175, 115, 1),
+  "team_leader": rgba(0, 124, 80, 1),
+  "analyst": rgba(230, 183, 37, 1),
+  "designer": rgba(230, 183, 37, 1),
+  "intern": rgba(5, 6, 151, 1),
+  "coworker": rgba(5, 6, 151, 1),
+  "tester": rgba(254, 98, 9, 1),
+  "ui_designer": rgba(125, 105, 176, 1),
+  "developer": rgba(18, 92, 255, 1),
+  "spectator": rgba(128, 74, 40, 1),
+  "CUSTOM_ROLE": rgba(236, 51, 0, 1),
 );
 
 $project-roles-text: (
@@ -30,7 +30,7 @@ $project-roles-text: (
   "ui_designer": black,
   "developer": black,
   "spectator": white,
-  "CUSTOM_ROLE": black,
+  "CUSTOM_ROLE": white,
 );
 
 @mixin project-role-icon($color) {
@@ -46,8 +46,8 @@ $project-roles-text: (
     left: -6px;
     top: 5px;
     border-radius: 2px;
-    background-color: #{$color};
-    box-shadow: 0.8px 0.8px 3px rgba(0, 0, 0, 0.8);
+    background-color: $color;
+    box-shadow: 0.8px 0.8px 3px rgba(0, 0, 0, 1);
   }
 }
 
@@ -56,7 +56,76 @@ $project-roles-text: (
     @include project-role-icon($role-color);
   }
   .profile-role-#{$project-role} {
-    background-color: #{$role-color};
+    background: $role-color;
     color: map.get($project-roles-text, $project-role);
+  }
+}
+
+@mixin project-status($color) {
+  padding-left: 12px;
+  position: relative;
+  &::before {
+    content: "";
+    position: absolute;
+    width: 5px;
+    height: 12px;
+    line-height: 12px;
+    margin-left: 4px;
+    left: -6px;
+    top: 3px;
+    border-radius: 1px;
+    background-color: $color;
+    box-shadow: 0.8px 0.8px 3px rgba(0, 0, 0, 0.8);
+  }
+}
+
+$project-statuses: (
+  "active": rgba(50, 90, 170, 1),
+  "completed": rgba(50, 170, 90, 1),
+  "cancelled": rgba(190, 50, 50, 1),
+  "archived": rgba(100, 100, 100, 1),
+);
+
+@each $status, $color in $project-statuses {
+  .project-status-#{$status} {
+    @include project-status($color);
+  }
+
+  .project-status-bg-#{$status} {
+    background-color: $color !important;
+    color: white !important;
+
+    padding-inline: 4px !important;
+    padding-block: 1px !important;
+    border-radius: 2px !important;
+    width: fit-content !important;
+    min-height: 17px !important;
+    max-height: 17px !important;
+    line-height: 17px !important;
+    font-family: Manrope !important;
+    font-size: 9px !important;
+    font-weight: 600 !important;
+    text-transform: uppercase !important;
+
+    display: flex !important;
+    justify-items: center !important;
+    align-items: center !important;
+    align-content: center !important;
+    position: relative !important;
+
+    &.archived {
+      &::before {
+        content: "";
+        width: 44px;
+
+        height: 2px;
+        background: rgba(220, 0, 0, 0.8);
+        box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+        position: absolute;
+        right: calc(-3px + 5%);
+        bottom: 8px;
+        transform: rotate(-30deg);
+      }
+    }
   }
 }
